[package]
name = "certs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
email-address-parser = "1.0.3"
rcgen = { version = "0.10.0", features = ["x509-parser"] }
rustyline = "11.0.0"
