[package]
name = "certman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
directories = "5.0.1"
email-address-parser = "1.0.3"
rcgen = { version = "0.10.0", features = ["x509-parser"] }
rustyline = "11.0.0"
serde = { version = "1.0.163", features = ["serde_derive"] }
time = { version = "0.3.21", features = ["serde"] }
toml = "0.7.3"
